--- a/src/app.html
+++ b/src/app.html
@@ -2,20 +2,41 @@
 	<div class="app">
 		<c-trait-drawer></c-trait-drawer>
 		<div class="content">
-			<lightning-layout class='top-area' vertical-align='end'>
-				<lightning-layout-item class='query-area'>
-					<label>Query</label>
+				<div class='slds-grid slds-grid_vertical-align-end top-area'>
+					<div class='slds-col query-column'>
+					<div>
+						<label for="segmentName">Segment Name</label>
+						<input type='text' id='segmentName'></input>
+					</div>
+					<div>
+						<label for="segmentDesc">Segment Description</label>
+						<input type='text' id='segmentDesc'></input>
+					</div>
+					<lightning-layout class="query-header" vertical-align="end">
+						<span if:true={invalidQuery}>
+							<svg  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium warning-button css-i4bv87-MuiSvgIcon-root" focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="WarningIcon" aria-label="Invalid Query! Missing Rule data" data-mui-internal-clone-element="true"><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"></path></svg>
+						</span>
+						<label>Query</label>
+					</lightning-layout>
 					<div class={queryBoxClass}>
 						<lightning-formatted-rich-text
 								value={readableQuery}
 						></lightning-formatted-rich-text>
 					</div>
-				</lightning-layout-item>
-				<lightning-layout-item class='count-area'>
-					<div class="count-box">
-						<div class="count-container">
-							<div class="count-dimensions-area">
-								<div class='counts-disabled-area' if:false={hasCounts}>&lt;Not Calculated&gt;</div>
+				</div>
+				<div class='slds-col slds-size_1-of-3 counts-column'>
+					<div class="slds-card count-box">
+						<div class="slds-grid slds-wrap count-container">
+							<div class="slds-col slds-size_1-of-1">
+								<div class='counts-header'>
+									<svg focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="HomeIcon"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"></path></svg>
+									Households
+								</div>
+								<div class='counts-disabled-area' if:false={hasCounts}>
+									<lightning-formatted-rich-text
+											value={noCountsText}
+									></lightning-formatted-rich-text>
+								</div>
 								<div if:true={hasCounts}>
 									<template for:each={counts} for:item="count">
 										<div key={count.name}>
@@ -25,13 +46,13 @@
 									</template>
 								</div>
 							</div>
-							<div class='count-button'>
+							<div class='slds-col slds-size_1-of-1 slds-align-bottom count-button'>
 								<button onclick={getCounts} disabled={disableCounts}>Get Counts</button>
 							</div>
 						</div>
 					</div>
-				</lightning-layout-item>
-			</lightning-layout>
+				</div>
+			</div>
 			<c-group grp={query} onaddgroup={addRuleGroup} 
 				ondeletegroup={deleteRuleGroup}
 				onaddrule={addRule}
