--- a/src/group.html
+++ b/src/group.html
@@ -1,25 +1,23 @@
 <template>
-  <lightning-layout class={grp.id}> 
+  <div class='slds-grid'> 
     <div class={connectionClass}></div>
     <div class={groupClass}>
-      <div class="group-actions-container">
-          <lightning-layout horizontal-align="spread" vertical-align="end">
-            <lightning-layout-item>
-              <select onchange={onConditionChange}>
-                <option value=''></option>
-                <template for:each={conditions} for:item='c'>
-                  <option key={c.name} value={c.value} selected={c.selected}>{c.name}</option>
-                </template>
-              </select>
-            </lightning-layout-item>
-            <lightning-layout-item class="button-container">
-              <button onclick={addGroup}>Add Rule Group</button>
-              <button onclick={addRule}>Add Rule</button>
-            </lightning-layout-item>
-        </lightning-layout>
+      <div class='slds-grid slds-grid_vertical-align-end slds-grid_align-spread'>
+        <div class='slds-col'>
+          <select onchange={onConditionChange}>
+            <option value=''></option>
+            <template for:each={conditions} for:item='c'>
+              <option key={c.name} value={c.value} selected={c.selected}>{c.name}</option>
+            </template>
+          </select>
+        </div>
+        <div class='slds-col button-container'>
+          <button onclick={addGroup}>Add Rule Group</button>
+          <button onclick={addRule}>Add Rule</button>
+        </div>
       </div>
       <template for:each={grp.data} for:item='c' for:index='idx'>
-          <div class="children" key={c.id}>
+          <div class="child-container" key={c.id}>
             <c-group  if:true={c.isGroup} grp={c} parent={grp} >
             </c-group> 
             <c-rule  if:false={c.isGroup} rule={c} parent={grp} >
@@ -27,10 +25,10 @@
           </div>
       </template>
       <template if:true={allowDelete}>
-        <div class='delete-box' onclick={deleteGroup}>
+        <div class='slds-is-absolute delete-icon-container' onclick={deleteGroup}>
           <svg class="" focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="HighlightOffIcon"><path d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"></path></svg>
         </div>
       </template>
     </div>
-  </lightning-layout>
+  </div>
 </template>
