--- a/src/rule.html
+++ b/src/rule.html
@@ -1,5 +1,5 @@
 <template>
-  <lightning-layout class={rule.id} onvaluechange={onValueChange}> 
+  <div class='slds-grid' onvaluechange={onValueChange}>
     <div class={connectionClass}></div>
     <div class='rule-wrapper'>
       <div if:true={emptyRule} 
@@ -12,8 +12,8 @@
         Drop Trait Here...
       </div>
       <div if:false={emptyRule} class="rule filled">
-        <lightning-layout>
-          <lightning-layout-item class='trait-data'>
+        <div class='slds-grid'>
+          <div class='slds-col slds-size_7-of-12'>
             <div>
               <b>Category:</b> {rule.trait.CATEGORY}
             </div>
@@ -23,29 +23,29 @@
             <div>
               <b>Trait:</b> {rule.trait.ALIAS}
             </div>
-          </lightning-layout-item>
-          <lightning-layout-item class='operator-data'>
-              <label for="operator">Operator</label>
-              <select id="operator" onchange={onOperatorChange}>
-                <option value=''></option>
-                <template for:each={operators} for:item='o'>
-                  <option key={o.name} value={o.value} selected={o.selected}>{o.name}</option>
-                </template>
-              </select>
-          </lightning-layout-item>
-          <lightning-layout-item class='value-data'>
-          <label for="value">Value(s)</label>
-              <c-value-select rule={rule} allowmultiselect={allowMultiSelect} options={allowedValues}>
-              </c-value-select>
-          </lightning-layout-item>
+          </div>
+          <div class='slds-col slds-size_2-of-12 operator-column'>
+            <label for="operator">Operator</label>
+            <select id="operator" onchange={onOperatorChange}>
+              <option value=''></option>
+              <template for:each={operators} for:item='o'>
+                <option key={o.name} value={o.value} selected={o.selected}>{o.name}</option>
+              </template>
+            </select>
+          </div>
+          <div class='slds-col slds-size_3-of-12 value-column'>
+            <label for="value">Value(s)</label>
+            <c-value-select rule={rule} allowmultiselect={allowMultiSelect} options={allowedValues}>
+            </c-value-select>
+          </div>
 
-        </lightning-layout>
+        </div>
       </div>
-      <div class='delete-icon'  onclick={deleteRule}>
+      <div class='slds-is-absolute delete-icon-container'  onclick={deleteRule}>
         <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
           <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"></path>
         </svg>
       </div>
     </div>
-  </lightning-layout>
+  </div>
 </template>
