--- a/src/group.html
+++ b/src/group.html
@@ -1,5 +1,5 @@
 <template>
-  <div class='slds-grid'> 
+  <div class='slds-grid'>
     <div class={connectionClass}></div>
     <div class={groupClass}>
       <div class='slds-grid slds-grid_vertical-align-end slds-grid_align-spread'>
@@ -17,16 +17,23 @@
         </div>
       </div>
       <template for:each={grp.data} for:item='c' for:index='idx'>
-          <div class="child-container" key={c.id}>
-            <c-group  if:true={c.isGroup} grp={c} parent={grp} >
-            </c-group> 
-            <c-rule  if:false={c.isGroup} rule={c} parent={grp} >
-            </c-rule> 
-          </div>
+        <div class="child-container" key={c.id}>
+          <c-drop-spot gid={c.parentId} index={idx} size={grp.data.length} position='before'></c-drop-spot>
+          <c-group if:true={c.isGroup} grp={c} parent={grp} index={idx}>
+          </c-group>
+          <c-rule if:false={c.isGroup} rule={c} parent={grp} index={idx}>
+          </c-rule>
+          <c-drop-spot gid={c.parentId} index={idx} size={grp.data.length} position='after'>
+          </c-drop-spot>
+        </div>
       </template>
       <template if:true={allowDelete}>
         <div class='slds-is-absolute delete-icon-container' onclick={deleteGroup}>
-          <svg class="" focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="HighlightOffIcon"><path d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"></path></svg>
+          <svg class="" focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="HighlightOffIcon">
+            <path
+              d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z">
+            </path>
+          </svg>
         </div>
       </template>
     </div>
