--- a/src/rule.html
+++ b/src/rule.html
@@ -1,14 +1,9 @@
 <template>
   <div class='slds-grid' onvaluechange={onValueChange}>
     <div class={connectionClass}></div>
-    <div class='rule-wrapper'>
-      <div if:true={emptyRule} 
-        class="rule empty"
-        ondragover={onDragOver}
-        ondragenter={onDragEnter}
-        ondragleave={onDragLeave}
-        ondrop={onDrop}
-      >
+    <div class='rule-wrapper' draggable="true" ondragstart={onDragStart}>
+      <div if:true={emptyRule} class="rule empty" ondragover={onDragOver} ondragenter={onDragEnter}
+        ondragleave={onDragLeave} ondrop={onDrop}>
         Drop Trait Here...
       </div>
       <div if:false={emptyRule} class="rule filled">
@@ -41,7 +36,7 @@
 
         </div>
       </div>
-      <div class='slds-is-absolute delete-icon-container'  onclick={deleteRule}>
+      <div class='slds-is-absolute delete-icon-container' onclick={deleteRule}>
         <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
           <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"></path>
         </svg>
