More/Drag Sort Changes

--- a/src/group.html
+++ b/src/group.html
@@ -1,7 +1,7 @@
 <template>
   <div class='slds-grid'>
     <div class={connectionClass}></div>
-    <div class={groupClass}>
+    <div class={groupClass} data-id={grp.id} draggable={allowDelete} ondragstart={onDragStart}>
       <div class='slds-grid slds-grid_vertical-align-end slds-grid_align-spread'>
         <div class='slds-col'>
           <select onchange={onConditionChange}>
@@ -16,9 +16,10 @@
           <button onclick={addRule}>Add Rule</button>
         </div>
       </div>
+      <c-drop-spot gid={grp.id} index=0 size={grp.data.length} position='before'></c-drop-spot>
+
       <template for:each={grp.data} for:item='c' for:index='idx'>
         <div class="child-container" key={c.id}>
-          <c-drop-spot gid={c.parentId} index={idx} size={grp.data.length} position='before'></c-drop-spot>
           <c-group if:true={c.isGroup} grp={c} parent={grp} index={idx}>
           </c-group>
           <c-rule if:false={c.isGroup} rule={c} parent={grp} index={idx}>
