--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,6 @@
 <template>
 	<div class="app">
-		<c-trait-drawer></c-trait-drawer>
+		<c-trait-drawer traitmeta={traitmetadata}></c-trait-drawer>
 		<div class="content">
 			<div class='slds-grid slds-grid_vertical-align-end top-area'>
 				<div class='slds-col query-column'>
