--- a/src/rule.html
+++ b/src/rule.html
@@ -1,7 +1,7 @@
 <template>
   <div class='slds-grid' onvaluechange={onValueChange}>
     <div class={connectionClass}></div>
-    <div class='rule-wrapper' draggable="true" ondragend={onDragEnd} ondragstart={onDragStart}>
+    <div class='rule-wrapper' draggable={isDraggable} ondragstart={onDragStart}>
       <div if:true={emptyRule} class="rule empty" ondragover={onDragOver} ondragenter={onDragEnter}
         ondragleave={onDragLeave} ondrop={onDrop}>
         Drop Trait Here...
@@ -21,22 +21,25 @@
           </div>
           <div class='slds-col slds-size_2-of-12 operator-column'>
             <label for="operator">Operator</label>
-            <select id="operator" onchange={onOperatorChange}>
+            <select if:false={isreadonly} id="operator" onchange={onOperatorChange}>
               <option value=''></option>
               <template for:each={operators} for:item='o'>
                 <option key={o.name} value={o.value} selected={o.selected}>{o.name}</option>
               </template>
             </select>
+            <div if:true={isreadonly}>{rule.operator}</div>
           </div>
           <div class='slds-col slds-size_3-of-12 value-column'>
             <label for="value">Value(s)</label>
-            <c-value-select rule={rule} allowmultiselect={allowMultiSelect} options={allowedValues}>
+            <c-value-select if:false={isreadonly} rule={rule} allowmultiselect={allowMultiSelect}
+              options={allowedValues}>
             </c-value-select>
+            <div if:true={isreadonly}>{selectedRuleValues}</div>
           </div>
 
         </div>
       </div>
-      <div class='slds-is-absolute delete-icon-container' onclick={deleteRule}>
+      <div if:false={isreadonly} class='slds-is-absolute delete-icon-container' onclick={deleteRule}>
         <svg focusable="false" aria-hidden="true" viewBox="0 0 24 24">
           <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"></path>
         </svg>
