--- a/src/rule.html
+++ b/src/rule.html
@@ -1,7 +1,7 @@
 <template>
   <div class='slds-grid' onvaluechange={onValueChange}>
     <div class={connectionClass}></div>
-    <div class='rule-wrapper' draggable={isDraggable} ondragstart={onDragStart}>
+    <div class={ruleWrapperClass} draggable={isDraggable} ondragstart={onDragStart}>
       <div if:true={emptyRule} class="rule empty" ondragover={onDragOver} ondragenter={onDragEnter}
         ondragleave={onDragLeave} ondrop={onDrop}>
         Drop Trait Here...
