--- a/src/dropSpot.html
+++ b/src/dropSpot.html
@@ -1,5 +1,5 @@
 <template>
-  <div class={parentSpotClass} onvaluechange={onValueChange}>
+  <div class={spotContainerClass} onvaluechange={onValueChange}>
     <div class='{connectionClass}'></div>
     <div class={spotClass} ondragover={onDragOver} ondragenter={onDragEnter} ondragleave={onDragLeave} ondrop={onDrop}>
     </div>
